5.8 star spacing and back button bugs

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,3 +46,7 @@ a:hover {
   background-color: none;
 }
 
+.navbar-default .navbar-nav > li > a {
+  text-transform: uppercase;
+}
+
