--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -91,3 +91,7 @@ body {
   }
 }
 
+.rated {
+  margin-left: 33px;
+}
+
